--- a/dev-workflow-ui/webContent/view/starts.xhtml
+++ b/dev-workflow-ui/webContent/view/starts.xhtml
@@ -52,8 +52,8 @@
               <p:tooltip for="processStartBtn" position="top" value="Start '#{start.displayName}'" />
             </p:column>
             <p:column width="30" styleClass="text-center">
-              <p:commandLink id="startActionsBtn" styleClass="text-color">
-                <i class="si si-lg si-navigation-menu-horizontal" />
+              <p:commandLink id="startActionsBtn" styleClass="text-color flex justify-content-center">
+                <i class="si si-lg si-navigation-menu-horizontal-filled" />
               </p:commandLink>
               <p:menu id="startsActionsMenu" overlay="true" trigger="startActionsBtn" my="right top" at="right bottom"
                 style="width: 200px">
