--- a/dev-workflow-ui/webContent/includes/components/caseDetails/description.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/description.xhtml
@@ -23,10 +23,7 @@
     <jc:user user="#{case.creatorUser}" id="creatorUser" />
 
     <h:outputText value="State" />
-    <h:panelGroup layout="block" styleClass="flex align-items-center">
-      <i class="si si-#{casesIvyDevWfBean.getStateIcon(case.businessState)} mr-1" />
-      <h:outputText value="#{case.businessState} (#{case.state})" id="caseState" />
-    </h:panelGroup>
+    <jc:stateBadge id="caseState" data="#{case}" />
 
     <h:outputText value="Category" />
     <h:outputText value="#{case.category.name}" id="category" />
