--- a/dev-workflow-ui/webContent/resources/components/caseLink.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/caseLink.xhtml
@@ -1,19 +1,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:cc="http://xmlns.jcp.org/jsf/composite" xmlns:ic="http://ivyteam.ch/jsf/component"
-  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
+  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
+  xmlns:jc="http://xmlns.jcp.org/jsf/composite/components">
 <cc:interface>
   <cc:attribute name="case" />
 </cc:interface>
 
 <cc:implementation>
-  <h:link styleClass="case-link flex align-items-center" outcome="case">
+  <h:link id="caseLink" styleClass="case-link flex align-items-center" outcome="case">
     <f:param name="id" value="#{cc.attrs.case.uuid()}"/>
-    <i class="si si-task-list-approve mr-1" />
-    <h:outputText id="caseState" styleClass="si si-#{casesIvyDevWfBean.getStateIcon(cc.attrs.case.getBusinessState())} mr-1"/>
-    <p:tooltip for="caseState" value="State: #{cc.attrs.case.businessState} (#{cc.attrs.case.state})" position="top"/>
-    <h:outputText id="caseLink" value="#{casesIvyDevWfBean.getName(cc.attrs.case)}" />
-    <p:tooltip for="caseLink" value="Case #{cc.attrs.case.uuid()}" position="top"/>
+    <jc:stateBadge id="caseState" data="#{cc.attrs.case}"/>
+    <h:outputText id="caseName" value="#{casesIvyDevWfBean.getName(cc.attrs.case)}" styleClass="ml-2 case-link-name"/>
+    <p:tooltip id="caseLinkTooltip" for="caseName" position="top">
+      <h:panelGroup layout="block" styleClass="py-2">
+        <h:outputText value="ID: #{cc.attrs.case.uuid()}"/>
+      </h:panelGroup>
+    </p:tooltip>
   </h:link>
 </cc:implementation>
 </html>
