--- a/dev-workflow-ui/webContent/view/cases.xhtml
+++ b/dev-workflow-ui/webContent/view/cases.xhtml
@@ -33,10 +33,8 @@
               </div>
             </f:facet>
 
-            <p:column filterBy="#{case.state}" styleClass="icon-row" sortBy="#{case.state}">
-              <h:outputText id="caseState"
-                styleClass="si si-lg si-#{casesIvyDevWfBean.getStateIcon(case.businessState)}" />
-              <p:tooltip for="caseState" value="State: #{case.businessState} (#{case.state})" position="top" />
+            <p:column headerText="State" filterBy="#{case.businessState}" sortBy="#{case.businessState}" width="70">
+              <jc:stateBadge id="caseState" data="#{case}" />
             </p:column>
 
             <p:column headerText="Name" filterBy="#{case.getName(case)}" sortBy="#{case.name}" responsivePriority="1">
@@ -61,7 +59,7 @@
             </p:column>
 
             <p:column styleClass="table-btn-1" width="10">
-              <p:link href="case.xhtml?id=#{case.uuid()}">
+              <p:link href="case.xhtml?id=#{case.uuid()}" styleClass="flex">
                 <i class="si si-information-circle detail-btn" />
               </p:link>
             </p:column>
