--- a/dev-workflow-ui/webContent/view/tasks.xhtml
+++ b/dev-workflow-ui/webContent/view/tasks.xhtml
@@ -33,12 +33,12 @@
               </div>
             </f:facet>
 
-            <p:column filterBy="#{task.state}" styleClass="icon-row" sortBy="#{task.state}">
-              <h:outputText id="taskState" styleClass="si si-lg si-#{task.stateIcon}" />
-              <p:tooltip for="taskState" value="State: #{task.businessState} (#{task.state})" position="top" />
+            <p:column headerText="State" filterBy="#{task.businessState}" sortBy="#{task.businessState}" width="75">
+              <jc:stateBadge id="taskState" data="#{task}"/>
             </p:column>
 
-            <p:column id="priority" filterBy="#{task.priority}" styleClass="icon-row" sortBy="#{task.priority}">
+            <p:column headerText="Prio" id="priority" filterBy="#{task.priority}" styleClass="center-table-cell"
+              sortBy="#{task.priority}" width="45">
               <h:outputText id="taskPrio" styleClass="si text-800 si-#{task.priorityIcon}" />
               <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
             </p:column>
@@ -64,7 +64,7 @@
             </p:column>
 
             <p:column styleClass="table-btn-1" responsivePriority="2" width="10">
-              <p:link href="#{task.detailUrl}">
+              <p:link href="#{task.detailUrl}" styleClass="flex">
                 <i class="si si-information-circle detail-btn" />
               </p:link>
             </p:column>
