XIVY-14720 Adjust navigation header looks

--- a/dev-workflow-ui/webContent/includes/template/template.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/template.xhtml
@@ -18,7 +18,7 @@
 </h:head>
 <h:body>
   <div class="layout-wrapper layout-topbar-#{ivyFreyaTheme.mode} layout-menu-#{ivyFreyaTheme.mode} layout-horizontal layout-designer">
-    <div class="layout-topbar" style="padding-right: 24px;">
+    <div class="layout-topbar">
       <div class="layout-topbar-wrapper">
         <div class="layout-topbar-left">
           <a href="#" class="menu-button">
