--- a/dev-workflow-ui/webContent/includes/template/sidebar.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/sidebar.xhtml
@@ -7,13 +7,13 @@
         <p:graphicImage name="#{ivyFreyaTheme.logo}" library="ivy-branding" alt="Logo" />
       </a>
     </div>
-    <div class="layout-menu-container">
+    <div class="layout-menu-container justify-content-center">
       <h:form id="menuform">
         <pm:menu widgetVar="sidebar_menu">
           <p:menuitem id="sr_home" value="Home" icon="si si-house-1" url="home.xhtml" containerStyleClass="#{sidebarIvyDevWfBean.isActive('home') ? 'active-nav-page' : ''}" />
           <p:menuitem id="sr_starts" value="Processes" icon="si si-hierarchy-6 si-rotate-270" url="starts.xhtml" containerStyleClass="#{sidebarIvyDevWfBean.isActive('starts') ? 'active-nav-page' : ''}" />
-          <p:menuitem id="sr_tasks" value="Tasks" icon="si si-layout-bullets" url="tasks.xhtml" containerStyleClass="#{sidebarIvyDevWfBean.isActive('tasks') ? 'active-nav-page' : ''}" />
-          <p:menuitem id="sr_cases" value="Cases" icon="si si-task-list-approve" url="cases.xhtml" containerStyleClass="#{sidebarIvyDevWfBean.isActive('cases') ? 'active-nav-page' : ''}" />
+          <p:menuitem id="sr_tasks" value="Tasks" icon="si si-list-bullets" url="tasks.xhtml" containerStyleClass="#{sidebarIvyDevWfBean.isActive('tasks') ? 'active-nav-page' : ''}" />
+          <p:menuitem id="sr_cases" value="Cases" icon="si si-pencil-write" url="cases.xhtml" containerStyleClass="#{sidebarIvyDevWfBean.isActive('cases') ? 'active-nav-page' : ''}" />
           <p:submenu id="sr_actions" label="Developer" icon="si si-tools-wench" rendered="#{adminIvyDevWfBean.isWorkflowAdmin()}" styleClass="#{sidebarIvyDevWfBean.isDeveloperPageActive()}">
             <p:menuitem id="sr_signals" value="Signals" icon="si si-network-signal" url="signals.xhtml" styleClass="#{sidebarIvyDevWfBean.isActive('signals') ? 'active-nav-submenu' : ''}"/>
             <p:menuitem id="sr_intermediate_events" value="Intermediate Events" icon="si si-analytics-graph" url="intermediateEvents.xhtml" styleClass="#{sidebarIvyDevWfBean.isActive('intermediateEvents') ? 'active-nav-submenu' : ''}"/>
