XIVY-14658 Fix Case table row click

--- a/dev-workflow-ui/webContent/view/home.xhtml
+++ b/dev-workflow-ui/webContent/view/home.xhtml
@@ -130,7 +130,7 @@
                   </p:commandLink>
                   <p:menu id="caseActionsMenu" overlay="true" trigger="caseActionsBtn" my="right top"
                     at="right bottom" style="width: 200px">
-                    <p:menuitem value="Rerun process" actionListener="#{homepageIvyDevWfBean.rerunProcess(case)}"
+                    <p:menuitem value="Rerun process" actionListener="#{casesIvyDevWfBean.rerunProcess(case)}"
                       id="rerunCaseProcessBtn" icon="si si-button-refresh-arrow" />
                     <p:menuitem id="openCaseDetailsBtn" value="Open case details"
                       url="#{case.detailLink}" icon="si si-information-circle" />
