XIVY-14787 Add app and pmv url parameter, improve startable search

--- a/dev-workflow-ui/webContent/view/start.xhtml
+++ b/dev-workflow-ui/webContent/view/start.xhtml
@@ -5,7 +5,10 @@
 
 <h:body>
   <f:metadata>
+    <f:viewParam name="app" value="#{processByUrlBean.app}" />
+    <f:viewParam name="pmv" value="#{processByUrlBean.pmv}" />
     <f:viewParam name="id" value="#{processByUrlBean.startableId}" />
+    <f:event type="preRenderView" listener="#{processByUrlBean.executeStart()}" />
   </f:metadata>
 
   <ui:composition template="../includes/template/template.xhtml">
